[package]
name = "firecore-pokedex-builder"
version = "0.5.0-2021-07-29"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = []
audio = []
# gen = []

[dependencies]

### Pokemon specifications

firecore-pokedex-client = { git="https://github.com/DoNotDoughnut/firecore-pokedex-client" }
bincode = "1.3"

### Serialization

serde = { version="1.0", features=["derive"] }
ron = "0.6"
