[package]
name = "firecore-pokedex-builder"
version = "0.5.0-2021-08-15"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[dependencies]
firecore-battle = { git = "https://github.com/DoNotDoughnut/firecore-battle", default-features = false }
ron = "0.6"
hashbrown = "0.11"
